# aho-corasick

./: .gitignore  Makefile  ac.cc  ac.h  ac_fast.cc  ac_fast.h  ac_slow.cc  ac_slow.h  ac_util.h  main.cc  meson.build
src/: ac.h  ac_fast.h  ac_slow.cc
src-alt/: ac.cc  ac.h  ac_fast.cc  ac_fast.h
test/: std_print.h  test_runner.cc  test_runner.h
tests/: Makefile  ac_test_simple.cc  ac_test_simple.cxx  test_base.h  test_main.cc  test_main.cxx  test_runner.cc  test_runner.h
